<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_directory"
        android:icon="@drawable/disk"
        android:title="@string/directory" />

    <item
        android:id="@+id/navigation_boards"
        android:icon="@drawable/calendar"
        android:title="@string/boards" />
    <item
        android:id="@+id/navigation_connect"
        android:icon="@drawable/connect"
        android:title="@string/connect" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/setting" />

</menu>