<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/popup_relative">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/title_popup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="Add Comment"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <EditText
                android:id="@+id/message_popup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/montserrat_semi_bold"
                android:gravity="start"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/black"
                android:hint="@string/please_type_here"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/white_rounded_bg"
                android:singleLine="true"
                android:maxLines="2"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/cancelTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/et_gray"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/submitTxt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/orange"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:text="@string/Submit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>